--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>API CALL PROJECT</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js" integrity="sha512-uMtXmF28A2Ab/JJO2t/vYhlaa/3ahUOgj1Zf27M5rOo8/+fcTUVH0/E0ll68njmjrLqOBjXM3V9NiPFL5ywWPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
 </head>
 <body>
@@ -15,10 +16,6 @@
   </div>
   <div id="netError"></div>
 
-  <!-- <div class="alert alert-danger" role="alert" id="errorDiv" style="display: none;">
-    Internet Problem!
-  </div>
--->
 <div id="copiedData" class="copied-text">
   <span id="copiedTextSpan"></span> Copied!
 </div>
